--- a/ClientReact/src/App.css
+++ b/ClientReact/src/App.css
@@ -2,7 +2,7 @@
   width: 100vw;
   height: 100vh;
   margin: 0 auto;
-  padding: 2rem;
+  padding:  0;
   text-align: center;
   background: #fff;
 }
